--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>Boilermaker</title>
     <link rel="stylesheet" href="/style.css" />
-    <script defer src="/bundle.js"></script>
   </head>
   <body>
     <div id="app"></div>
+    <!-- <script src="/napster.js"></script> -->
+    <script src="/bundle.js"></script>
   </body>
 </html>
 
